--- a/style.css
+++ b/style.css
@@ -8,7 +8,16 @@
     box-sizing: border-box;
 }
 
+img {
+    width: 100%;
+    height: auto;
+    vertical-align: bottom;
+}
+
 body {
+    font-family: 'Arial', sans-serif;
+    line-height: 1.6;
+    color: #333;
     height: 100%;
 }
 
@@ -18,11 +27,7 @@ body {
     min-height: 100vh;
 }
 
-img {
-    width: 100%;
-    height: auto;
-    vertical-align: bottom;
-}
+
 
 /* Header */
 header {
@@ -35,8 +40,8 @@ header h1 {
 }
 
 nav ul {
+    list-style: none;
     padding-bottom: 1rem;
-    margin: 0;
     text-align: center;
     /*display: flex;*/
     /*justify-content: space-evenly;*/
@@ -48,6 +53,7 @@ nav ul li {
 }
 
 nav ul li a {
+    text-decoration: none;
     font-weight: bold;
     color: rgb(62, 183, 213);
     transition-duration: .5s;
@@ -71,8 +77,29 @@ main {
 section {
     background: rgb(255, 255, 255);
     padding: 20px;
-
+    width: 100%;
 }
+
+.sec01 {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+  
+  .sec02 {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+  
+  .sec03 {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
 
 h2 {
     color: #00BFFF;
@@ -106,23 +133,11 @@ footer {
     padding: 1rem;
     width: 100%;
 }
-.sec01 {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 2;
-  }
+
+  /* .sticky {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  } */
   
-  .sec02 {
-    grid-row-start: 1;
-    grid-row-end: 2;
-    grid-column-start: 2;
-    grid-column-end: 3;
-  }
-  
-  .sec03 {
-    grid-row-start: 2;
-    grid-row-end: 3;
-    grid-column-start: 1;
-    grid-column-end: 3;
-  }
